loading spinner for incomes

--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -17,7 +17,7 @@
 
 {% block content %}
 <!-- Loader -->
-<div class="loader loader-default" id="loader"></div>
+<div class="loader loader-default" id="loader" class="is-active"></div>
 
 <div class="row gx-2">
     <div class="col-lg-8">
