--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -16,8 +16,9 @@
 
 
 {% block content %}
+
 <!-- Loader -->
-<div class="loader loader-default" id="loader" class="is-active"></div>
+<div class="htmx-indicator loader loader-default is-active" id="indicator"></div>
 
 <div class="row gx-2">
     <div class="col-lg-8">
