--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -186,7 +186,7 @@
                   <hr class="dropdown-divider">
                 </li>
                 <li>
-                  <button class="dropdown-item btn-sm" data-url="{% url 'accounts:accounts_new' %}">{% translate 'Account' context 'account button' %}</button>
+                  <button class="dropdown-item btn-sm" data-url="{% url 'accounts:new' %}">{% translate 'Account' context 'account button' %}</button>
                 </li>
                 <li>
                   <button class="dropdown-item btn-sm" data-url="{% url 'incomes:type_new' %}">{% translate 'Incomes type' context 'income type button' %}</button>
