--- a/project/transactions/templates/transactions/index.html
+++ b/project/transactions/templates/transactions/index.html
@@ -56,7 +56,7 @@
     <div class="col-lg-4">
         <div class="row my-2">
             <div class="col text-end">
-                {% url 'accounts:accounts_new' as url_accounts %}
+                {% url 'accounts:new' as url_accounts %}
                 <button type="button" class="btn btn-sm btn-outline-success" data-url="{{ url_accounts }}"><i class="bi bi-plus"></i> {% translate 'Account' context 'account button' %}</button>
             </div>
         </div>
