--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -114,7 +114,7 @@
         <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'expenses:new' %}"> <i class="bi bi-plus"></i>{% translate 'Expenses' context "expenses button" %}</button>
         <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'incomes:new' %}"> <i class="bi bi-plus"></i>{% translate 'Incomes' context "incomes button" %}</button>
         <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'savings:new' %}"> <i class="bi bi-plus"></i>{% translate 'Savings' context "savings button" %}</button>
-        <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'transactions:transactions_new' %}"> <i class="bi bi-plus"></i>{% translate 'Transactions' context 'transactions button' %}</button>
+        <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'transactions:new' %}"> <i class="bi bi-plus"></i>{% translate 'Transactions' context 'transactions button' %}</button>
         <button type="button" class="btn btn-sm btn-outline-success" data-url="{% url 'drinks:drinks_new' %}"><i class="bi bi-plus"></i>{% translate 'Drinks' context 'drinks button' %}</button>
         <button class="btn btn-sm btn-info" onclick="myFunction()">{% translate 'Show other chart' %}</button>
     </div>
