--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -82,7 +82,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link {% if '/transactions/' in request.path %}active{% endif %}" href="{% url 'transactions:transactions_index' %}">{% translate 'Transactions' %}</a>
+            <a class="nav-link {% if '/transactions/' in request.path %}active{% endif %}" href="{% url 'transactions:index' %}">{% translate 'Transactions' %}</a>
           </li>
 
           <li class="nav-item">
@@ -177,7 +177,7 @@
                   <button class="dropdown-item btn-sm" data-url="{% url 'expenses:new' %}">{% translate "Expenses" context "expenses button" %}</button>
                 </li>
                 <li>
-                  <button class="dropdown-item btn-sm" data-url="{% url 'transactions:transactions_new' %}">{% translate 'Transactions' context "transactions button" %}</button>
+                  <button class="dropdown-item btn-sm" data-url="{% url 'transactions:new' %}">{% translate 'Transactions' context "transactions button" %}</button>
                 </li>
                 <li>
                   <button class="dropdown-item btn-sm" data-url="{% url 'savings:new' %}">{% translate 'Savings' context "savings button" %}</button>
