--- a/project/transactions/templates/transactions/transaction_list.html
+++ b/project/transactions/templates/transactions/transaction_list.html
@@ -1,3 +1,3 @@
 {% load table %}
 
-{% table 'transactions:transactions_update' 'transactions:transactions_delete' %}
+{% table 'transactions:update' 'transactions:delete' %}
