--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -90,7 +90,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link {% if '/debts/' in request.path %}active{% endif %}" href="{% url 'debts:debts_index' %}">{% translate 'Depts' %}</a>
+            <a class="nav-link {% if '/debts/' in request.path %}active{% endif %}" href="{% url 'debts:index' %}">{% translate 'Depts' %}</a>
           </li>
 
           <li class="nav-item">
