--- a/project/debts/templates/debts/debtreturn_list.html
+++ b/project/debts/templates/debts/debtreturn_list.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load slippers %}
 
-{% if items %}
+{% if object_list %}
 
 {% var target=request.resolver_match.kwargs.debt_type %}
 
@@ -22,17 +22,17 @@
         </tr>
     </thead>
     <tbody>
-        {% for item in items %}
-        {% url 'debts:return_update' target item.id as url_update %}
-        {% url 'debts:return_delete' target item.id as url_delete %}
-        <tr data-url="" class="dblclick" {% ifchanged item.debt.name or ifchanged item.debt.closed %}{% if not forloop.first %}style="border-top: 5px #c0c0c0 solid;"{% endif %}{% endifchanged %}>
-            <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
-            <td class="text-start">{{ item.debt.name }}</td>
-            <td class="text-start">{{ item.price|intcomma }}</td>
-            <td class="text-start">{{ item.account }}</td>
-            <td class="text-start">{{ item.remark }}</td>
-            <td class="text-center">{% if item.debt.closed %}<i class="bi bi-check-circle-fill"></i>{% endif %}</td>
-            {% if not item.debt.closed %}
+        {% for object in object_list %}
+        {% url 'debts:return_update' target object.id as url_update %}
+        {% url 'debts:return_delete' target object.id as url_delete %}
+        <tr data-url="" class="dblclick" {% ifchanged object.debt.name or ifchanged object.debt.closed %}{% if not forloop.first %}style="border-top: 5px #c0c0c0 solid;"{% endif %}{% endifchanged %}>
+            <td class="text-start">{{ object.date|date:"Y-m-d" }}</td>
+            <td class="text-start">{{ object.debt.name }}</td>
+            <td class="text-start">{{ object.price|intcomma }}</td>
+            <td class="text-start">{{ object.account }}</td>
+            <td class="text-start">{{ object.remark }}</td>
+            <td class="text-center">{% if object.debt.closed %}<i class="bi bi-check-circle-fill"></i>{% endif %}</td>
+            {% if not object.debt.closed %}
             {% edit_cell url=url_update target=target %}
             {% delete_cell url=url_delete target=target %}
             {% else %}
