loading spinner for incomes, expenses, books

--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="row">
-            <div id="list" class="col" hx-trigger="load, reload from:body, afterType from:body, afterName from:body" hx-get="{% url 'expenses:list' %}{% if current_month %}?month={{ current_month }}{% endif %}" hx-target="this"></div>
+            <div id="list" class="col" hx-trigger="load, reload from:body, afterType from:body, afterName from:body" hx-get="{% url 'expenses:list' %}{% if current_month %}?month={{ current_month }}{% endif %}" hx-target="this" hx-indicator="#indicator"></div>
         </div>
     </div>
 
