--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -5,6 +5,7 @@
 {% load i18n %}
 
 {% block head %}
+<link rel="stylesheet" href="{% static 'css/css-loader.css' %}">
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
 <script src="https://code.highcharts.com/modules/bullet.js"></script>
 
@@ -18,12 +19,15 @@
 
 {% block content %}
 
+<!-- Loader -->
+<div class="htmx-indicator loader loader-default is-active" id="indicator"></div>
+
 <div class="row my-2">
     {% url 'books:search' as search_url %}
     {% url 'books:list' as reset_url %}
     <div class="col-3 text-start" id="search_form_data" hx-trigger="reloadSearch from:body">{% search_form url=search_url reset_url=reset_url target="#book_list" %}</div>
 
-    <div class="col text-center" id="info_row" hx-trigger="load, reload from:body, afterTarget from:body" hx-get="{% url 'books:info_row' %}" hx-target="this"></div>
+    <div class="col text-center" id="info_row" hx-trigger="load, reload from:body, afterTarget from:body" hx-get="{% url 'books:info_row' %}" hx-target="this" hx-indicator="#indicator"></div>
 
     <div class="col-3 text-end">
         <button type="button" class="btn btn-sm btn-outline-success" hx-get="{% url 'books:new' %}" hx-target="#dialog"><i class="bi bi-plus"></i>{% translate 'Book' context 'book add button' %}</button>
