--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="row">
-            <div id="income_list" class="col" hx-trigger="load, reload from:body, afterType from:body" hx-get="{% url 'incomes:list' %}" hx-target="this"></div>
+            <div id="income_list" class="col" hx-trigger="load, reload from:body, afterType from:body" hx-get="{% url 'incomes:list' %}" hx-target="this" hx-indicator="#indicator"></div>
         </div>
     </div>
 
