--- a/project/counts/templates/counts/count_list.html
+++ b/project/counts/templates/counts/count_list.html
@@ -15,8 +15,8 @@
 
         {% var count_type=request.resolver_match.kwargs.count_type %}
 
-        {% url 'counts:counts_update' count_type item.id as url_update %}
-        {% url 'counts:counts_delete' count_type item.id as url_delete %}
+        {% url 'counts:update' count_type item.id as url_update %}
+        {% url 'counts:delete' count_type item.id as url_delete %}
 
         {% ifchanged item.date|date:"F" %}
         {% if not forloop.first %}
