--- a/project/counts/templates/counts/tab_history.html
+++ b/project/counts/templates/counts/tab_history.html
@@ -10,7 +10,7 @@
     $(document).on('hidden.bs.modal', '#modal-form', function () {
         $.ajax({
             success: function (data) {
-                window.location.href = '{% url 'counts:counts_history' view.kwargs.count_type %}';
+                window.location.href = '{% url 'counts:history' view.kwargs.count_type %}';
             },
         });
     });
