--- a/project/counts/templates/counts/count_list.html
+++ b/project/counts/templates/counts/count_list.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 {% load slippers %}
-{% if items %}
 
+{% if object_list %}
+{% var count_type=request.resolver_match.kwargs.slug %}
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
@@ -11,32 +12,25 @@
         </tr>
     </thead>
     <tbody>
-        {% for item in items %}
+        {% for obj in object_list %}
 
-        {% var count_type=request.resolver_match.kwargs.count_type %}
-
-        {% url 'counts:update' count_type item.id as url_update %}
-        {% url 'counts:delete' count_type item.id as url_delete %}
-
-        {% ifchanged item.date|date:"F" %}
+        {% ifchanged obj.date|date:"F" %}
         {% if not forloop.first %}
         <tr><td colspan="4" class="table-active"></td></tr>
         {% endif %}
         {% endifchanged %}
 
-        <tr data-url="{{ url_update }}" class="dblclick">
-            <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
-            <td class="text-start">{{ item.quantity }}</td>
+        {% url 'counts:update' count_type obj.id as url_update %}
+        {% url 'counts:delete' count_type obj.id as url_delete %}
+        <tr hx-get="{{ url_update }}" hx-target="#dialog" hx-trigger="dblclick">
+            <td class="text-start">{{ obj.date|date:"Y-m-d" }}</td>
+            <td class="text-start">{{ obj.quantity }}</td>
             {% edit_cell url=url_update %}
             {% delete_cell url=url_delete %}
         </tr>
-
         {% endfor %}
     </tbody>
 </table>
-
 {% else %}
-
     {% if not records %}<div id="no-records">{% include 'core/no_records.html' %}</div>{% endif %}
-
 {% endif %}
